--- a/ZealandMarketPlace/wwwroot/css/site.css
+++ b/ZealandMarketPlace/wwwroot/css/site.css
@@ -7,7 +7,7 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: #F1F3F8;
 }
 
 .btn-primary {
