--- a/ZealandMarketPlace/Pages/Items/DeleteItem.cshtml
+++ b/ZealandMarketPlace/Pages/Items/DeleteItem.cshtml
@@ -1,11 +1,83 @@
 ﻿@page
+@using ZealandMarketPlace.Models
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model ZealandMarketPlace.Pages.Items.DeleteItemModel
 @{
 }
-<h1>Delete Item</h1>
-<br />
-<h3>Are you sure you want to DELETE this Item?</h3>
-<br />
+
+<link rel="stylesheet" href="~/css/deleteItem.css"/>
+
+
+<div class="deleteItem_headline">
+    <p>Are you sure you want to DELETE this Item?</p>
+</div>
+
+<div class="card_details_container">
+    <div class="card">
+
+        <div class="image_card_container">
+            <div class="image_card">
+                <img src="data:image/png;base64,@Convert.ToBase64String(Model.item.ImageData)" alt="image">
+            </div>
+
+        </div>
+
+        <div class="product_details_content">
+
+            <div class="headline_page">
+                <h2 class="product_headline">@Model.item.Name</h2>
+            </div>
+
+            <div class="product_info_detail">
+                <div class="about_item">
+                    <h2>about this item: </h2>
+                    <p>@Html.DisplayFor(model => model.item.Descritpion)</p>
+                </div>
+
+                <table>
+                    <tr>
+                        <td class="element_box">@Html.DisplayNameFor(model => model.item.Name):</td>
+                        <td>@Html.DisplayFor(model => model.item.Name)</td>
+                    </tr>
+                    <tr>
+                        <td class="element_box">@Html.DisplayNameFor(model => model.item.Status):</td>
+                        <td>@Html.DisplayFor(model => model.item.Status)</td>
+                    </tr>
+                    <tr>
+                        <td class="element_box">@Html.DisplayNameFor(model => model.item.Category):</td>
+                        <td>@Html.DisplayTextFor(model => model.item.Category)</td>
+                    </tr>
+                    <tr>
+                        <td class="element_box">@Html.DisplayNameFor(model => model.item.Price):</td>
+                        <td>@Html.DisplayFor(model => model.item.Price)dkk</td>
+                    </tr>
+                </table>
+            </div>
+
+            <!--
+            <div class="contact_box">
+                <form method="post">
+                    <button type="button" class="button_contact">Buy Contact</button>
+                </form>
+
+                <a asp-page="/Index" class=""> <i class="fa-solid fa-heart"></i></a>
+            </div>
+            -->
+        </div>
+    </div>
+</div>
+
+<div class="buttons_container">
+    <div class="buttons_box">
+    <form method="post">
+        <input type="submit" value="Delete Item" class="delete_button"/>
+    </form>
+        
+            <a asp-page="/Index" class="index_button">Back To List</a>
+    </div>
+</div>
+
+<!--
 <div>
     <dl class="row">
         <dt class="col-sm-2">
@@ -49,3 +121,4 @@
         <a asp-page="/Index">NO - Back to List</a>
     </div>
 </div>
+-->
