--- a/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
+++ b/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
@@ -5,66 +5,59 @@
 @{
 }
 
-
 <script src="https://kit.fontawesome.com/671f3bdf44.js"></script>
 
-<div class="card-wrapper">
+<div class="card_details_container">
     <div class="card">
 
-        <!-- card left -->
-        <div class="product-imgs">
-            <div class="img-display">
-                <img src="data:image/png;base64,@Convert.ToBase64String(Model.Item.ImageData)" alt="shoe image">
+        <div class="image_card_container">
+            <div class="image_card">
+                <img src="data:image/png;base64,@Convert.ToBase64String(Model.Item.ImageData)" alt="image">
             </div>
 
         </div>
-        <!-- card right -->
-        <div class="product-content">
+        
+        <div class="product_details_content">
             
             <div class="headline_page">
             <a asp-page="/Index" class=""> <i class="fa-solid fa-arrow-left"></i></a>
-            <h2 class="product-title">@Model.Item.Name</h2>
+            <h2 class="product_headline">@Model.Item.Name</h2>
             </div>
 
-
-            <div class="product-detail">
-                
+            <div class="product_info_detail">
                 <div class="about_item">
                 <h2>about this item: </h2>
                     <p>@Html.DisplayFor(model => model.Item.Descritpion)</p>
                     </div>
-                <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, perferendis eius. Dignissimos, labore suscipit. Unde.</p>-->
 
                 <table>
                     <tr>
-                        <td class="padding">@Html.DisplayNameFor(model => model.Item.Name):</td>
+                        <td class="element_box">@Html.DisplayNameFor(model => model.Item.Name):</td>
                         <td>@Html.DisplayFor(model => model.Item.Name)</td>
                     </tr>
                     <tr>
-                        <td class="padding">@Html.DisplayNameFor(model => model.Item.Status):</td>
+                        <td class="element_box">@Html.DisplayNameFor(model => model.Item.Status):</td>
                         <td>@Html.DisplayFor(model => model.Item.Status)</td>
                     </tr>
                     <tr>
-                        <td class="padding">@Html.DisplayNameFor(model => model.Item.Category):</td>
+                        <td class="element_box">@Html.DisplayNameFor(model => model.Item.Category):</td>
                         <td>@Html.DisplayTextFor(model => model.Item.Category)</td>
                     </tr>
                     <tr>
-                        <td class="padding">@Html.DisplayNameFor(model => model.Item.Price):</td>
+                        <td class="element_box">@Html.DisplayNameFor(model => model.Item.Price):</td>
                         <td>@Html.DisplayFor(model => model.Item.Price)dkk</td>
                     </tr>
                 </table>
-
             </div>
 
-            <div class="purchase-info">
-
+            <div class="contact_box">
+                
                 <form method="post">
                     <button type="button" class="button_contact">Buy Contact</button>
                 </form>
 
-
                 <a asp-page="/Index" class=""> <i class="fa-solid fa-heart"></i></a>
-
+                    
             </div>
         </div>
     </div>
@@ -85,58 +78,3 @@
         </form>
     </div>
 </div>
-
-
-
-<!--
-<h2>Details of @Model.Item.Name</h2>
-
-<div>
-    <dl class="row">
-        <div class="card_image">
-            <img alt="photo" src="data:image/png;base64,@Convert.ToBase64String(Model.Item.ImageData)">
-        </div>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Item.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Item.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Item.Status)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Item.Status)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Item.Descritpion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Item.Descritpion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Item.Category)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayTextFor(model => model.Item.Category)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Item.Price)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Item.Price)
-        </dd>
-    </dl>
-    <form method="post">
-        <div>
-            <input type="submit" value="Contact" class="btn btn-warning"/>
-        </div>
-    </form>
-    <br/>
-    <div>
-        <a asp-page="/Items/GetItems">Back to List</a>
-    </div>
-
-    
-</div>
--->
