--- a/ZealandMarketPlace/Pages/Index.cshtml
+++ b/ZealandMarketPlace/Pages/Index.cshtml
@@ -1,47 +1,47 @@
 ﻿@page
 @model IndexModel
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
 @{
     ViewData["Title"] = "Home page";
 }
 
+
 <link rel="stylesheet" href="~/css/index.css">
- <script type="text/javascript" src="~/js/dropdown.js"></script>
+<script type="text/javascript" src="~/js/dropdown.js"></script>
 <script src="https://kit.fontawesome.com/671f3bdf44.js"></script>
+<form method="get">
 
 
-<section class="section_search_box">
-    <div class="container_search_box">
-        <div class="box_search_box">
+    <section class="section_search_box">
+        <div class="container_search_box">
+            <div class="box_search_box">
 
-            <div class="filtering_dropdown">
-                <div class="main_slider_container">
-                    <div class="main_option">All</div>
-                    <div class="slider"></div>
+                <div class="filtering_dropdown">
+                    <div class="main_slider_container">
+                        <select asp-for="@Model.Category" asp-items="Html.GetEnumSelectList<Category>()">
+                                                <option selected="selected">Please select category</option>
+                                            </select>
+                        @* <div class="main_option">All</div> *@
+                        @* <div class="slider"></div> *@
+                    </div>
+
+                    
+
                 </div>
-                <ul>
-                    <li>All</li>
-                    <li>Enum1</li>
-                    <li>Enum2</li>
-                    <li>Enum3</li>
-                    <li>Enum4</li>
-                    <li>Enum5</li>
-                </ul>
-            </div>
 
-            <div class="filtering_field">
-                <input type="text" class="input" placeholder="Search">
+                <div class="filtering_field">
+                    <input asp-for="@Model.SearchTerm" type="text" class="input" placeholder="Search">
+                    <button type="submit">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
 
-                <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
 
             </div>
         </div>
-    </div>
-  
-</section>
 
+    </section>
+</form>
 
 
 <main>
