--- a/ZealandMarketPlace/Pages/Contacts.cshtml
+++ b/ZealandMarketPlace/Pages/Contacts.cshtml
@@ -13,40 +13,43 @@
         <h4>UserName: @user.NormalizedUserName</h4>
     </div>  
     -->
-    
-    
 }
 
 <main>
     <section class="card_section">
         @foreach (var user in Model.UsersContacts)
         {
-            
-    <div class="card_container">
+            <a asp-page="/Items/UsersItems" asp-route-userId="@user.Id">
 
-        <div class="card_text_content">
-            
-            <div class="card_info">
-                <p class="text--medium"><b>Email:</b> @user.Email</p>
-            </div>
-            
-            <div class="card_info">
-                <p class="text--medium"><b>Number:</b> @user.PhoneNumber</p>
-            </div>
-            
-            <div class="card_info">
-                <p class="text--medium"><b>Name:</b> @user.NormalizedUserName</p>
-            </div>
-            
-            
-            
+                <div class="card_container">
+
+                    <div class="card_text_content">
+
+                        <div class="card_info">
+                            <p class="text--medium">
+                                <b>Email:</b> @user.Email
+                            </p>
+                        </div>
+
+                        <div class="card_info">
+                            <p class="text--medium">
+                                <b>Number:</b> @user.PhoneNumber
+                            </p>
+                        </div>
+
+                        <div class="card_info">
+                            <p class="text--medium">
+                                <b>Name:</b> @user.NormalizedUserName
+                            </p>
+                        </div>
 
 
-        </div>
-        </div>
-            
+                    </div>
+                </div>
+            </a>
         }
 
 
     </section>
+
 </main>
