--- a/ZealandMarketPlace/Pages/Items/UsersItems.cshtml
+++ b/ZealandMarketPlace/Pages/Items/UsersItems.cshtml
@@ -1,11 +1,15 @@
-﻿@page
-@model ZealandMarketPlace.Pages.Items.FavouritesModel
+@page
+@model ZealandMarketPlace.Pages.Items.UsersItems
+
 @{
     ViewData["Title"] = "Favourites";
 }
 
 <link rel="stylesheet" href="~/css/index.css">
-
+<div style="margin: 30px">
+    <h3>Users email: @Model.ItemUser.Email</h3>
+<h5>Users id: @Model.ItemUser.Id</h5>
+</div>
 <main>
     <section class="card_section">
         @foreach (var item in Model.Items)
