--- a/ZealandMarketPlace/Pages/Contacts.cshtml
+++ b/ZealandMarketPlace/Pages/Contacts.cshtml
@@ -3,23 +3,12 @@
 
 <link rel="stylesheet" href="~/css/contacts.css">
 
-@foreach (var user in Model.UsersContacts)
-{
-    <!--
-    <div>
-        <h5>Id: @user.Id</h5>
-        <h3>Email: @user.Email</h3>
-        <h4>Phone number: @user.PhoneNumber</h4>
-        <h4>UserName: @user.NormalizedUserName</h4>
-    </div>  
-    -->
-}
+
 
 <main>
     <section class="card_section">
         @foreach (var user in Model.UsersContacts)
         {
-            <a asp-page="/Items/UsersItems" asp-route-userId="@user.Id">
 
                 <div class="card_container">
 
@@ -42,11 +31,14 @@
                                 <b>Name:</b> @user.NormalizedUserName
                             </p>
                         </div>
+                        
+                        <div class="card_button_items">
+                            <a asp-page="/Items/UsersItems" asp-route-userId="@user.Id">See user items</a>
+                        </div>
 
 
                     </div>
                 </div>
-            </a>
         }
 
 
