--- a/ZealandMarketPlace/wwwroot/css/contacts.css
+++ b/ZealandMarketPlace/wwwroot/css/contacts.css
@@ -47,9 +47,20 @@ main{
 
 .card_info{
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
+
+.card_button_items{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    background-color: #3174CC;
+    margin-top: 5px;
+    padding: 5px;
+    border-radius: 20px;
+    color: #F1F3F8;
+}
+
 
 @media only screen and (max-width: 1280px) {
     .container_search_box{
