headings finishing design

--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/UpdateItem.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/UpdateItem.cshtml
@@ -4,6 +4,13 @@
     Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" href="~/css/headline.css">
+
+<div class="headline">
+    <p>UPDATE ITEM</p>
+</div>
+
+
 <body>
         <form method="post" asp-page="UpdateItem" id="first" enctype="multipart/form-data">
             <div class="form-container">
