--- a/ZealandMarketPlace/Pages/Contacts.cshtml
+++ b/ZealandMarketPlace/Pages/Contacts.cshtml
@@ -2,8 +2,12 @@
 @model ZealandMarketPlace.Pages.Contacts
 
 <link rel="stylesheet" href="~/css/contacts.css">
+<link rel="stylesheet" href="~/css/headline.css">
 
 
+<div class="headline">
+    <p>CONTACTS</p>
+</div>
 
 <main>
     <section class="card_section">
