--- a/ZealandMarketPlace/Pages/Items/AddItem.cshtml
+++ b/ZealandMarketPlace/Pages/Items/AddItem.cshtml
@@ -1,6 +1,13 @@
 ﻿@page
 @model ZealandMarketPlace.Pages.Items.AddItemModel
 
+<link rel="stylesheet" href="~/css/headline.css">
+
+
+<div class="headline">
+    <p>ADD ITEM</p>
+</div>
+
 <form method="post" asp-page="AddItem" id="first" enctype="multipart/form-data">
     <div class="form-container">
         <div class="info-container">
