--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/DeleteItem.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/DeleteItem.cshtml
@@ -9,7 +9,7 @@
     <form method="post" asp-page="DeleteItem">
         <input asp-for="@Model.ItemId" id="itemId" type="hidden">
         <span>Are you sure you want to delete this item?</span>
-        <button asp-page="./Index" id="submit" >No</button>
+        <button asp-page="./Index" id="submitNo" >No</button>
         <button id="submit" type="submit" alt="Add">Yes</button>
     </form>
 </div>
