--- a/ZealandMarketPlace/Pages/Index.cshtml
+++ b/ZealandMarketPlace/Pages/Index.cshtml
@@ -9,7 +9,12 @@
 <link rel="stylesheet" href="~/css/index.css">
 <script type="text/javascript" src="~/js/dropdown.js"></script>
 <script src="https://kit.fontawesome.com/671f3bdf44.js"></script>
+<link rel="stylesheet" href="~/css/headline.css">
 
+
+<div class="headline_index">
+    <p>ZEALAND MARKETPLACE</p>
+</div>
 
 <form method="get">
     <section class="section_search_box">
