--- a/ZealandMarketPlace/Pages/Items/Favourites.cshtml
+++ b/ZealandMarketPlace/Pages/Items/Favourites.cshtml
@@ -5,6 +5,13 @@
 }
 
 <link rel="stylesheet" href="~/css/index.css">
+<link rel="stylesheet" href="~/css/headline.css">
+
+
+<div class="headline">
+    <p>FAVOURITES</p>
+</div>
+
 
 <main>
     <section class="card_section">
