--- a/ZealandMarketPlace/wwwroot/css/details.css
+++ b/ZealandMarketPlace/wwwroot/css/details.css
@@ -74,6 +74,8 @@ img{
 .product_info_detail p{
     font-size: 0.9rem;
     opacity: 0.8;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 .element_box{
@@ -208,7 +210,7 @@ select.classic {
     background-size:
             5px 5px,
             5px 5px,
-            2.5em 2.5em;
+            2.5em 2.6em;
     background-repeat: no-repeat;
 }
 
@@ -269,6 +271,7 @@ select.classic {
 }
 
 .review_headline p{
+    text-decoration: underline;
     font-weight: bold;
     font-size: 35px;
     color: #3174CC;
