--- a/ZealandMarketPlace/wwwroot/css/profile.css
+++ b/ZealandMarketPlace/wwwroot/css/profile.css
@@ -45,15 +45,16 @@ span.text-danger {
 form button {
     margin-top: 10px;
     padding: 10px;
-    background-color: rgb(37, 201, 255);
+    background-color: #4AD188;
     border-radius: 5px;
+    color: #F1F3F8;
     border: none;
     cursor: pointer;
     transition: 1s;
 }
 
 form button:hover {
-    background-color: rgba(38, 191, 255, 0.6);
+    background-color: #289d5e;
 }
 
 .form-container h4 {
