--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/UpdateItem.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/UpdateItem.cshtml
@@ -5,95 +5,85 @@
 }
 
 <link rel="stylesheet" href="~/css/headline.css">
+<link rel="stylesheet" href="~/css/addUpdateItem.css">
 
 <div class="headline">
     <p>UPDATE ITEM</p>
 </div>
 
 
-<body>
-        <form method="post" asp-page="UpdateItem" id="first" enctype="multipart/form-data">
-            <div class="form-container">
-                <div class="info-container">
-                     <label asp-for="@Model.Item.Name">Name</label>
-                    <input asp-for="@Model.Item.Name" id="name" placeholder="Name" type="text">
-                    <label asp-for="@Model.Item.Descritpion">Descritpion</label>
-                    <textarea asp-for="@Model.Item.Descritpion" id="email" placeholder="Describe your product" rows="4" cols="50"></textarea>
-                    <label asp-for="@Model.Item.Price">Price</label>
-                    <input asp-for="@Model.Item.Price" id="contact" placeholder="Price in dkk" type="text">
-                    <label asp-for="@Model.Item.Category">Category</label>
-                    <input asp-for="@Model.Item.ItemId" id="itemId" type="hidden">
-                    <input asp-for="@Model.Item.UserId" id="userId" type="hidden">
-                    <input asp-for="@Model.Item.ImageData" id="imageData" type="hidden">
-                    <input asp-for="@Model.Item.DateTime" id="dateTime" type="hidden">
-                    <select asp-for="@Model.Item.Category" asp-items="Html.GetEnumSelectList<Category>()">
-                        <option selected="selected" value="">Please select category</option>
-                    </select>
-                    <select asp-for="@Model.Item.Status" asp-items="Html.GetEnumSelectList<Status>()">
-                        <option selected="selected" value="">Please select status</option>
-                    </select>
-                    <button id="submit" type="submit" alt="Add">Update</button>
-                </div>
-                <div class="item-picture-container">
-                    <div class="photo-container">
-                        @if (@Model.Item.ImageData == null)
-                        {
-                            <img class="photo" alt="photo" src="">
-                        }
-                        else
-                        {
-                           <img class="photo" alt="photo" src="data:image/png;base64,@Convert.ToBase64String(@Model.Item.ImageData)">
-                        }
-                    </div>
-                    <div class="upload-img-container">
-                        <label>Upload new image</label>
-                        <input type="file" id="file1"
-                               name="file1"
-                               accept="image/png, image/gif, image/jpeg"/>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </body>
+<form method="post" asp-page="UpdateItem" id="first" class="container" enctype="multipart/form-data">
+  <div class="item_form_container">
+    
+    <input asp-for="@Model.Item.ItemId" id="itemId" type="hidden"> 
+    <input asp-for="@Model.Item.UserId" id="userId" type="hidden"> 
+    <input asp-for="@Model.Item.ImageData" id="imageData" type="hidden"> 
+    <input asp-for="@Model.Item.DateTime" id="dateTime" type="hidden">
 
-@* <div> *@
-@*         <form method="post" asp-page="AddItem" id="update-form" enctype="multipart/form-data"> *@
-@*             <div class="update-form-container"> *@
-@*                 <div class="update-info-container"> *@
-@*                     <label asp-for="@Model.Item.Name">Name</label> *@
-@*                     <input asp-for="@Model.Item.Name" id="name" placeholder="Name" type="text"> *@
-@*                     <label asp-for="@Model.Item.Descritpion">Descritpion</label> *@
-@*                     <textarea asp-for="@Model.Item.Descritpion" id="email" placeholder="Describe your product" rows="4" cols="50"></textarea> *@
-@*                     <label asp-for="@Model.Item.Price">Price</label> *@
-@*                     <input asp-for="@Model.Item.Price" id="contact" placeholder="Price in dkk" type="text"> *@
-@*                     <label asp-for="@Model.Item.Category">Category</label> *@
-@*                     <input asp-for="@Model.Item.ItemId" id="itemId" type="hidden"> *@
-@*                     <input asp-for="@Model.Item.UserId" id="userId" type="hidden"> *@
-@*                     <input asp-for="@Model.Item.ImageData" id="imageData" type="hidden"> *@
-@*                     <input asp-for="@Model.Item.DateTime" id="dateTime" type="hidden"> *@
-@*                     <select asp-for="@Model.Item.Category" asp-items="Html.GetEnumSelectList<Category>()"> *@
-@*                         <option selected="selected" value="">Please select category</option> *@
-@*                     </select> *@
-@*                     <select asp-for="@Model.Item.Status" asp-items="Html.GetEnumSelectList<Status>()"> *@
-@*                         <option selected="selected" value="">Please select status</option> *@
-@*                     </select> *@
-@*                     <input id="submit" type="image" src="~/images/add_circle.png" alt="Add"> *@
-@*                 </div> *@
-@*                 $1$ @if (@Model.Item.ImageData == null) #1# *@
-@*                 $1$     { #1# *@
-@*                 $1$         <img class="photo" alt="photo" src=""> #1# *@
-@*                 $1$     } #1# *@
-@*                 $1$     else #1# *@
-@*                 $1$     { #1# *@
-@*                 $1$        <img class="photo" alt="photo" src="data:image/png;base64,@Convert.ToBase64String(@Model.Item.ImageData)"> #1# *@
-@*                 $1$     } #1# *@
-@*                 <label>Upload new image</label> *@
-@*                 <div class="img-container"> *@
-@*                     <input *@
-@*                         type="file" id="file1"  *@
-@*                         name="file"  *@
-@*                         accept="image/png, image/gif, image/jpeg" /> *@
-@*                 </div> *@
-@*             </div> *@
-@*         </form> *@
-@*   </div> *@
+    <div>
+      <div class="form_block">
+        <label asp-for="@Model.Item.Name" class="heading"></label>
+        <input asp-for="@Model.Item.Name" class="text_input" placeholder="Name" type="text">
+      </div>
+    </div>
+
+    <div>
+      <div class="form_block">
+        <label asp-for="@Model.Item.Descritpion" class="heading"></label>
+        <textarea asp-for="@Model.Item.Descritpion" class="text_input" placeholder="Describe your product" rows="4" cols="50">Describe your product</textarea>
+      </div>
+    </div>
+
+    <div>
+      <div class="form_block">
+        <label asp-for="@Model.Item.Price" class="heading"></label>
+        <input asp-for="@Model.Item.Price" class="text_input" placeholder="Price in dkk" type="number">
+      </div>
+    </div>
+
+    <div>
+      <div class="form_block">
+        <label asp-for="@Model.Item.Category" class="heading"></label>
+
+        <select asp-for="@Model.Item.Category" asp-items="Html.GetEnumSelectList<Category>()" class="text_input">
+          <option selected="selected" value="">Please select category</option>
+        </select>
+      </div>
+    </div>
+
+    <div>
+      <div class="form_block">
+        <label asp-for="@Model.Item.Status" class="heading"></label>
+
+        <select asp-for="@Model.Item.Status" asp-items="Html.GetEnumSelectList<Status>()" class="text_input">
+          <option selected="selected" value="">Please select status</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form_block">
+      <label class="heading">Update Image</label>
+      <div class="photo_container"> 
+         @if (@Model.Item.ImageData == null) 
+           { 
+               <img class="photo" alt="photo" src=""> 
+           } 
+           else 
+           { 
+              <img class="photo" alt="photo" src="data:image/png;base64,@Convert.ToBase64String(@Model.Item.ImageData)"> 
+           }
+      </div> 
+      
+      <input type="file" id="file1"
+             name="file1"
+             accept="image/png, image/gif, image/jpeg"/>
+    </div>
+
+    <div class="button_container">
+      <button class="update_button" type="submit" alt="Update">Update</button>
+    </div>
+
+  </div>
+ </form>
+
+
