--- a/ZealandMarketPlace/Pages/Items/AddItem.cshtml
+++ b/ZealandMarketPlace/Pages/Items/AddItem.cshtml
@@ -2,35 +2,68 @@
 @model ZealandMarketPlace.Pages.Items.AddItemModel
 
 <link rel="stylesheet" href="~/css/headline.css">
-
+<link rel="stylesheet" href="~/css/addUpdateItem.css">
 
 <div class="headline">
     <p>ADD ITEM</p>
 </div>
 
-<form method="post" asp-page="AddItem" id="first" enctype="multipart/form-data">
-    <div class="form-container">
-        <div class="info-container">
-            <label asp-for="@Model.Item.Name">Name</label>
-            <input asp-for="@Model.Item.Name" id="name" placeholder="Name" type="text">
-            <label asp-for="@Model.Item.Descritpion">Descritpion</label>
-            <textarea asp-for="@Model.Item.Descritpion" id="email" placeholder="Describe your product" rows="4" cols="50"></textarea>
-            <label asp-for="@Model.Item.Price">Price</label>
-            <input asp-for="@Model.Item.Price" id="contact"  placeholder="Price in dkk" type="number">
-            <label asp-for="@Model.Item.Category">Category</label>
-            <select asp-for="@Model.Item.Category" asp-items="Html.GetEnumSelectList<Category>()">
-                <option selected="selected" value="">Please select category</option>
-            </select>
-            <select asp-for="@Model.Item.Status" asp-items="Html.GetEnumSelectList<Status>()">
-                <option selected="selected" value="">Please select status</option>
-            </select>
 
-            <button id="submit" alt="Add">Add item</button>
-        </div>
-        <div class="img-container">
-            <input type="file" id="file1"
-                   name="file1"
-                   accept="image/png, image/gif, image/jpeg"/>
-        </div>
-    </div>
-</form>
+<form method="post" asp-page="AddItem" id="first" class="container" enctype="multipart/form-data">
+   <div class="item_form_container">
+
+     <div>
+       <div class="form_block">
+         <label asp-for="@Model.Item.Name" class="heading"></label>
+         <input asp-for="@Model.Item.Name"  class="text_input" placeholder="Name" type="text">
+       </div>
+     </div>
+
+     <div>
+       <div class="form_block">
+         <label asp-for="@Model.Item.Descritpion" class="heading"></label>
+         <textarea asp-for="@Model.Item.Descritpion" class="text_input" placeholder="Describe your product" rows="4" cols="50">Describe your product</textarea>
+       </div>
+     </div>
+
+     <div>
+       <div class="form_block">
+         <label asp-for="@Model.Item.Price" class="heading"></label>
+         <input asp-for="@Model.Item.Price" class="text_input"  placeholder="Price in dkk" type="number">
+       </div>
+     </div>
+        
+     <div>
+       <div class="form_block">
+         <label asp-for="@Model.Item.Category" class="heading"></label>
+            
+         <select asp-for="@Model.Item.Category" asp-items="Html.GetEnumSelectList<Category>()" class="text_input">
+           <option selected="selected" value="">Please select category</option>
+         </select>
+       </div>
+     </div>
+
+     <div>
+       <div class="form_block">
+         <label asp-for="@Model.Item.Status" class="heading"></label>
+            
+         <select asp-for="@Model.Item.Status" asp-items="Html.GetEnumSelectList<Status>()" class="text_input">
+           <option selected="selected" value="">Please select status</option>
+         </select>
+       </div>
+     </div>
+
+     <div class="form_block" >
+       <label class="heading">Upload Image</label>
+       <input type="file" id="file1"
+              name="file1"
+              accept="image/png, image/gif, image/jpeg"/>
+     </div>
+     
+      <div class="button_container">    
+          <button alt="Add">Add item</button>
+      </div>
+         
+   </div>
+ </form>
+  
