--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,28 +11,21 @@
         <div>
             <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
                 <!--<div asp-validation-summary="All" class="text-danger"></div> -->
-                <div class="validation">
+                <div class="validation" style="display: flex; flex-direction: column">
                     <span asp-validation-for="Input.FirstName" class="text_information"></span>
                     <span asp-validation-for="Input.LateName" class="text_information"></span>
-
+                    <span asp-validation-for="Input.Password"  class="text_information"></span>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text_information"></span> 
+                    <span asp-validation-for="Input.Email" class="text_information"></span>
+                    <span asp-validation-for="Input.Phone" class="text_information"></span>
                 </div>
                 <div class="register_item">
                     <input asp-for="Input.FirstName"  type="text" placeholder="First name"/>
                     <input asp-for="Input.LateName"  type="text" placeholder="Last name"/>
                 </div>
-                <div class="validation">
-                    <span asp-validation-for="Input.Email" class="text_information"></span>
-                    <span asp-validation-for="Input.Phone" class="text_information"></span>
-
-                </div>
                 <div class="register_item">
                     <input asp-for="Input.Email" type="text" placeholder="Email"/>
                     <input asp-for="Input.Phone" type="text" placeholder="Phone"/>
-                </div>
-                <div class="validation">
-                        <span asp-validation-for="Input.Password"  class="text_information"></span>
-                     <span asp-validation-for="Input.ConfirmPassword" class="text_information"></span> 
-
                 </div>
                 <div class="register_item">
                     <input asp-for="Input.Password" type="password"  placeholder="Password"/>
