potreba zmenit neco v stylesheets na item details

--- a/ZealandMarketPlace/Pages/Index.cshtml
+++ b/ZealandMarketPlace/Pages/Index.cshtml
@@ -57,7 +57,7 @@
                 <div class="card_image">
                     @if (@item.ImageData == null)
                     {
-                        <img alt="photo" src="">
+                        <img alt="defaultPhoto" src="~/images/defaultPhoto.jpg">
                     }
                     else
                     {
