--- a/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
+++ b/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
@@ -14,7 +14,7 @@
             <div class="image_card">
                 @if (@Model.Item.ImageData == null)
                 {
-                    <img class="photo" alt="photo" src="">
+                    <img class="photo" alt="defaultPhoto" src="~/images/defaultPhoto2.png">
                 }
                 else
                 {
