add subscriber role and logic

--- a/ZealandMarketPlace/Pages/Shared/_LoginPartial.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_LoginPartial.cshtml
@@ -18,7 +18,16 @@
     }
     
     <li>
-        <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">profile</a>
+        <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            @if (User.IsInRole("Subscriber"))
+            {
+                <p>profile(subscriber)</p>
+            }
+            else
+            {
+                <p>profile</p>
+            }
+            </a>
     </li>
 
     <li>
