--- a/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/ZealandMarketPlace/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -6,6 +6,7 @@
     <li><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
     <li><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
     <li><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
-    <li><a class="nav-link @ManageNavPages.ManageItemsClass(ViewContext)" id="items" asp-page="./ManageItems">ManageItems</a></li>
+    <li><a class="nav-link @ManageNavPages.ManageItemsClass(ViewContext)" id="items" asp-page="./ManageItems">Manage Items</a></li>
+    <li><a class="nav-link @ManageNavPages.ManageSubscriptionClass(ViewContext)" id="subscription" asp-page="./ManageSubscription">Manage Subscription</a></li>
     
 </ul>
