--- a/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
+++ b/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
@@ -4,7 +4,8 @@
 @model ZealandMarketPlace.Pages.Items.ItemDetailsModel
 @{
 }
-
+<link rel="stylesheet" href="~/css/contacts.css">
+<link rel="stylesheet" href="~/css/headline.css">
 <script src="https://kit.fontawesome.com/671f3bdf44.js"></script>
 
 <div class="card_details_container">
@@ -61,9 +62,37 @@
 
             <div class="contact_box">
                 @{
-                    if (Model.BoughtContacts.Contains(Model.Item.UserId))
+                    if (Model.BoughtContacts.Contains(Model.Item.UserId)|| User.IsInRole("Subscriber"))
                     {
-                        <a class="button_contact" asp-page="/Contacts">See the contact</a>
+                        <div class="card_container">
+
+                            <div class="card_text_content">
+
+                                <div class="card_info">
+                                    <p class="text--medium">
+                                        <b>Email:</b> @Model.Owner.Email
+                                    </p>
+                                </div>
+
+                                <div class="card_info">
+                                    <p class="text--medium">
+                                        <b>Number:</b> @Model.Owner.PhoneNumber
+                                    </p>
+                                </div>
+
+                                <div class="card_info">
+                                    <p class="text--medium">
+                                        <b>Name:</b> @Model.Owner.NormalizedUserName
+                                    </p>
+                                </div>
+                        
+                                <div class="card_button_items">
+                                    <a asp-page="/Items/UsersItems" asp-route-userId="@Model.Owner.Id">See user items</a>
+                                </div>
+
+
+                            </div>
+                        </div>
                     }
                     else
                     {
@@ -100,7 +129,7 @@
 <div class="review_container">
     <div class="review_box">
         @{
-            if (Model.BoughtContacts.Contains(Model.Item.UserId))
+            if (Model.BoughtContacts.Contains(Model.Item.UserId) || User.IsInRole("Subscriber"))
             {
                 <form method="post" asp-page-handler="Review">
                     <input type="text" asp-for="@Model.Review.ReceiverId" value="@Model.Item.UserId" hidden="hidden">
@@ -125,7 +154,7 @@
 </div>
 
 <div class="review_headline">
-    <p>REVIEWS</p>
+    <p>User's REVIEWS</p>
 </div>
 
 <div class="review_list_container">
