--- a/ZealandMarketPlace/Pages/Shared/_LoginPartial.cshtml
+++ b/ZealandMarketPlace/Pages/Shared/_LoginPartial.cshtml
@@ -6,17 +6,21 @@
 {
     if (!User.IsInRole("Administrator"))
     {
-        <li>
-            <a asp-page="/Contacts">Contacts</a>
-        </li>
+        @if (!User.IsInRole("Subscriber"))
+        {
+            <li>
+                <a asp-page="/Contacts">Contacts</a>
+            </li>
+        }
+
         <li>
             <a asp-page="/Items/Favourites">My Favourites</a>
-        </li> 
+        </li>
         <li>
             <a asp-page="/Items/AddItem">Add Item</a>
         </li>
     }
-    
+
     <li>
         <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
             @if (User.IsInRole("Subscriber"))
@@ -27,7 +31,7 @@
             {
                 <p>profile</p>
             }
-            </a>
+        </a>
     </li>
 
     <li>
