--- a/ZealandMarketPlace/Pages/Items/Favourites.cshtml
+++ b/ZealandMarketPlace/Pages/Items/Favourites.cshtml
@@ -21,7 +21,7 @@
                 <div class="card_image">
                     @if (@item.ImageData == null)
                     {
-                        <img alt="photo" src="">
+                         <img class="photo" alt="defaultPhoto" src="~/images/defaultPhoto.jpg">
                     }
                     else
                     {
