--- a/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
+++ b/ZealandMarketPlace/Pages/Items/ItemDetails.cshtml
@@ -147,14 +147,14 @@
             }
             else
             {
-                <h2>To write a review, you need to buy the product first</h2>
+                <h2>To write a review, you need to buy the contact first</h2>
             }
         }
     </div>
 </div>
 
 <div class="review_headline">
-    <p>User's REVIEWS</p>
+    <p>Seller's REVIEWS</p>
 </div>
 
 <div class="review_list_container">
